# LexPkg

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  README_template.md  pyproject.toml  requirements-dev.txt  requirements-dist.txt  requirements.txt  tox.ini
.github/workflows/: build_test.yml
src/lexpkg/: __init__.py  __main__.py  add.py  config_default.yml  git.py  lexpkg.py  logging_utils.py  main_script.py  scripting.py  user_input.py
src/lexpkg/data/: process_data.yml
src/lexpkg/subpkg/: __init__.py  module.py  multiply.py
tests/: doctest_runner.py  test_add.py  test_module.py  test_multiply.py  test_scripting.py
