[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lexpkg"
version = "0.0.1"
# authors = [
#     { name="Alex Armstrong" },
# ]
# description = "An example packaged python project"
# readme = "README.md"
# requires-python = ">=3.9"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

# [project.urls]
# "Homepage" = "https://github.com/alexarmstrongvi/LexPkg"
