[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

################################################################################
[project]
# Required metadata
name = "lexpkg"
dynamic = ["version"]
# Installation requirements
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
]
# Optional metadata
# authors = [
#     { name = "Alex Armstrong" },
# ]
# description = "An example packaged python project"
# readme = "README.md"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]
#
# [project.urls]
# "Homepage" = "https://github.com/alexarmstrongvi/LexPkg"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "tox",
    # REPL
    "ipykernel",
    # Debugging
    "ipdb",
    # Code quality
    "pylint",     # Linter
    "flake8",     # Linter
    "ruff",       # Linter
    "isort",      # Import order checker
    "black",      # Formatter
    "mypy",       # Type checker
    "radon",      # Complexity checker
    "coverage",   # Coverage checker
    "pytest-cov", # Coverage checker pluging for pytest
    # Documentation
    "sphinx",
    # Centralized Version Control
    "pre-commit",
]
build = [
    "build", # Generating
    "twine", # Uploading
]

[project.scripts]
lexpkg = "lexpkg.lexpkg:main"
lexscript = "lexpkg.bin.lexscript:main"
process_data = "lexpkg.bin.process_data:main"

################################################################################
[tool.setuptools.dynamic]
version = {attr = "lexpkg.__version__"}

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.isort]
import_heading_stdlib = "Standard library"
import_heading_thirdparty = "3rd party"
import_heading_firstparty = "1st party"
import_heading_localfolder = "Local"
force_sort_within_sections = true
multi_line_output = 3 # Vertical Hanging Indent

[tool.pylint.main]
recursive = true
[tool.pylint."MESSAGES CONTROL"]
ignore = [".venv", ".tox", "docs"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",

]
[tool.pylint.design]
max-args = 10

[tool.mypy]
exclude = [
    "docs/",
]
